--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "angular-vs-repeat",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "Virtual Scroll for AngularJS ngRepeat directive",
-  "homepage": "http://kamilkp.github.io/angular-vs-repeat",
+  "homepage": "https://github.com/jSharpWolf/angular-vs-repeat",
   "main": "src/angular-vs-repeat.js",
   "keywords": [
     "angularjs",
