--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "angular-vs-repeat",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "Virtual Scroll for AngularJS ngRepeat directive",
-  "homepage": "http://kamilkp.github.io/angular-vs-repeat",
+  "homepage": "https://github.com/jSharpWolf/angular-vs-repeat",
   "author": {
     "name": "Kamil Pekala",
     "email": "kamilkp@gmail.com",
@@ -11,7 +11,7 @@
   "main": "src/angular-vs-repeat.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kamilkp/angular-vs-repeat.git"
+    "url": "https://github.com/jSharpWolf/angular-vs-repeat.git"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
